--- a/01_C&&C++.md
+++ b/01_C&&C++.md
@@ -3521,7 +3521,7 @@ free B
 
 # unique_ptr
 
-## 创建智能指针
+## 1.创建智能指针
 
 ```cpp
 //C++11: 
@@ -3530,11 +3530,11 @@ std::unique_ptr<Task> taskPtr(new Task(23));
 std::unique_ptr<Task> taskPtr = std::make_unique<Task>(34);
 ```
 
-## 不能复制
+## 2.不能复制
 
-unique_ptr不能直接复制，必须使用`std::move()`转移其管理的指针，转移后原 unique_ptr 为空。`std::unique_ptr<Task> taskPtr4 = std::move(taskPtr2);`
+unique_ptr不能直接复制，必须使用`std::move()`转移其管理的指针，转移后原unique_ptr为空。`std::unique_ptr<Task> taskPtr4 = std::move(taskPtr2);`
 
-## 成员函数
+## 3.成员函数
 
 | 成员函数  | 作用                                                         |
 | --------- | ------------------------------------------------------------ |
@@ -3542,7 +3542,7 @@ unique_ptr不能直接复制，必须使用`std::move()`转移其管理的指针
 | release() | 仅仅只是释放关联指针的所有权，置unique_ptr为空，不delete关联指针，返回的是关联的普通指针。 |
 | get()     | 获取普通指针，返回的是关联的普通指针                         |
 
-## 防止内存泄漏
+## 4.防止内存泄漏
 
 - `unique_ptr`是C++ 11提供的用于防止内存泄漏的智能指针中的一种实现，是一个装指针的容器，且拥有关联指针的唯一所有权，独享被管理对象指针所有权的智能指针。`unique_ptr`对象包装一个普通指针，并负责其生命周期。当该智能指针对象被销毁时，会在其析构函数中删除关联的普通指针。
 
