第一次提交

--- a/01_C&&C++.md
+++ b/01_C&&C++.md
@@ -2787,21 +2787,21 @@ int main(void){
 
 面向对象更适合于开发大型软件，更有利于代码的复用。
 
-# >>>>>>>>>>封装>>>>>>>>>>
+# ——封装——
 
 # 1.面向对象三大特性
 
 ## 1.1.封装
 
-将数据和操作数据的函数包装在一起的主要目的就是实现封装和隐藏。隐藏就是不让结构体外的函数直接修改结构体中的数据，只能通过结构体的成员函数对数据进行修改。
+​	将数据和操作数据的函数包装在一起的主要目的就是实现封装和隐藏。隐藏就是不让结构体外的函数直接修改结构体中的数据，只能通过结构体的成员函数对数据进行修改。
 
 为了实现数据的隐藏，C++新增3三个访问权限限定符
 
-- public  公有的，函数和数据可以被结构体内外的任何函数包括main函数访问
+- public公有的，函数和数据可以被结构体内外的任何函数包括main函数访问。
   <u>自己，子类以及外部都能访问</u>
-- protected 保护成员，与继承相关，能被派生类访问，但不能被类外的任何地方访问
-  <u>只能自己和子类家里人访问，但外部不能访问</u>
-- private （隐藏）私有的，只能被结构体内部函数访问
+- protected保护成员，与继承相关，能被派生类访问，但不能被类外的任何地方访问。
+  <u>只能自己和子类访问，但外部不能访问</u>
+- private （隐藏）私有的，只能被结构体内部函数访问。
   <u>只有自己能访问，子类以及外部不能访问</u>
 
 ## 	1.2.继承
@@ -3373,7 +3373,7 @@ int main(void){
 }
 ```
 
-# 7.常成员函数
+# 常成员函数
 
 ## 7.1.定义
 
@@ -3649,7 +3649,7 @@ int main(int argc, char *argv[]){
 }
 ```
 
-# 10.友元
+# 友元
 
 类的封装具有信息隐藏能力，但也带来了访问效率问题。
 
@@ -3910,15 +3910,13 @@ private:
 
 对于懒汉式这两种情况，当调用`getInstance()`函数时，如果对象还没产生（第一种状态），就需要产生对象，然后[返回对象](https://marketing.csdn.net/p/3127db09a98e0723b83b2914d9256174?pId=2782&utm_source=glcblog&spm=1001.2101.3001.7020)指针。如果对象已经存在了（第二种状态），就直接返回对象指针。当单线程时，没有问题。但是，**多线程情况下，如果一个函数中不同状态有不同操作，就要考虑线程互斥的问题了**。因此，我们需要修改一下`getInstance`中的实现。
 
-# >>>>>>>>>>继承>>>>>>>>>>
+# ——继承——
 
 # 1.继承
 
 ## 1.1.定义
 
-继承，基于一个已有类创建新类，使类与已有类具有同样的功能，即新类具有已有类相同的数据成员和成员函数。继承是代码重用的基本工具。已有类称为基类（父类/超类），新类称为派生类（子类）。
-
-继承可以看成申请新的空间并复制基类中被继承的成员，继承与否主要看子类是否为其分配了内存空间，并不是看是否能访问，有些成员虽然不能被继承，但仍可以被子类访问。
+继承，基于一个已有类创建新类，使类与已有类具有同样的功能，即新类具有已有类相同的数据成员和成员函数。继承是代码重用的基本工具。已有类称为基类（父类/超类），新类称为派生类（子类）。继承可以看成申请新的空间并复制基类中被继承的成员，继承与否主要看子类是否为其分配了内存空间，并不是看是否能访问，有些成员虽然不能被继承，但仍可以被子类访问。
 
 - 基类的<u>**构造函数和析构函数**</u>不能继承
   尽管派生类不直接继承基类的构造和析构函数，有自己的构造和析构函数，但是派生类的构造函数一定会调用基类的某一个构造函数，析构函数也是一样。
@@ -4341,7 +4339,7 @@ int main(int argc, char *argv[]){
 - 组合是has-a的关系，即一个类有一个成员是另一类类的对象
 
 
-# >>>>>>>>>>多态>>>>>>>>>>
+# ——多态——
 
 # 1.多态
 
@@ -4431,7 +4429,7 @@ Base::fun
 Base::fun
 ```
 
-# 3.1.覆盖与隐藏的区别
+# 4.覆盖与隐藏的区别
 
 ### 覆盖（Overriding）
 
@@ -4455,16 +4453,16 @@ Base::fun
 - 调用哪个函数**取决于指针或引用的类型**（编译时绑定）。
 - 不是多态的一种形式，因为它不依赖于对象的实际类型。
 
-# 4.产生多态的条件
+# 5.产生多态的条件
 
 - 除了要满足函数重写的语法要求，还必须通过指针或引用调用虚函数才能表现出来。<!--【注意不能利用变量执行“变量名.函数名”的语句来调用，否则不会表现出多态性】-->
 - 调用虚函数的指针也可以是this指针，当使用子类对象调用基类中的成员函数时，该函数里面的this指针将是一个基类指针类型的，且指向的是子类对象的地址，再通过this去调用满足重写要求的虚函数同样可以表现多态的语法特性。
 
-# 5.纯虚函数
+# 6.纯虚函数
 
 如果一个虚函数只声明不定义，称为纯虚函数或抽象方法。
 
-## 5.1.语法格式
+## 6.1.语法格式
 
 ```c++
 class 类名{
@@ -4475,13 +4473,13 @@ class 类名{
 
 假设有图形类Figure,设计计算面积成员函数area(),Figure只是一个纯抽象意义上的概念，由于图形多种多样，不存在计算面积或体积的**具体方法**，所有只能将成员函数area()设计为纯虚函数。
 
-## 5.2.抽象类
+## 6.2.抽象类
 
 如果类中包含了纯虚函数，那么这个类就是抽象类，抽象类只能作为其他类的基类，不能用来建立对象，因为你成员方法都没定义，建立对象也用不了。
 
 如果类中所有成员函数都是纯虚函数则可以称为纯抽象类。
 
-## 5.3.总结
+## 6.3.总结
 
 1.成员函数重载发生在同一个作用域内，函数名相同但参数列表（参数的数量、类型或顺序）不同的多个函数。
 
@@ -4489,7 +4487,7 @@ class 类名{
 
 3.隐藏发生在有继承关系的两个类中，子类有一个和父类名称相同的成员函数，但是参数列表不同，此时子类版本的函数隐藏了所有同名的父类函数，无论父类中的函数参数列表是否相同。
 
-# 6.虚析构函数
+# 7.虚析构函数
 
 **问题引出：**
 
